# ipat

./: README.md  main.py  pyproject.toml
ipat/: baken.py  baken_syurui.py  bet.py  ipat.py
ipatbot/: baken.py  baken_syurui.py  bet.py  ipat.py
tests/: test_ipat.py  test_ipatbot.py
