[tool.poetry]
name = "ipatbot"
version = "0.1.0"
description = ""
authors = ["satomacoto <satomacoto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
selenium = "^4.1.3"
webdriver-manager = "^3.5.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
